test/error/type/err3.rzy
Weekday = Enum
  Monday;
  Tuesday;
  Wednesday;
  Thursday;
  Friday;
  Saturday;
  Sunday;
end

Err3 = Component
  foo : slot( x: Weekday );

elementary
  foo : slot( x: Weekday )
    z : Weekday = x + Weekday.Tuesday;
  end
end

